css/index/media.css
@media only screen and (max-width: 1300px) {
  /* header */
  .header_container {
    padding-left: 55px;
    padding-right: 55px;
  }
  /* main */
  .main_container {
    padding-left: 55px;
    padding-right: 55px;
  }
  /* portfolio */
  .portfolio_container {
    padding-left: 55px;
    padding-right: 55px;
  }
  /* career-path */
  .career_container {
    padding-left: 55px;
    padding-right: 55px;
  }
  /* testimonials-path */
  .testimonial_container {
    padding-left: 55px;
    padding-right: 55px;
  }
  /* education and skills*/
  .education_container {
    padding-left: 55px;
    padding-right: 55px;
  }
  /* contact */
  .contact_container {
    padding-left: 55px;
    padding-right: 55px;
  }
}
/* Large devices (desktops, less than 1200px) */
@media only screen and (max-width: 1199.98px) {
  /* header */
  #header .header_container .nav_list li + li {
    margin-left: 25px;
  }
  /* portfolio */
  /* education and skills*/
  /* testimonials */
  /* contact  */
}
/* Medium devices (tablets, less than 992px) */
@media only screen and (max-width: 991.98px) {
  /* header */
  .header_container {
    padding-left: 30px;
    padding-right: 30px;
  }
  #header .header_container .nav_list {
    display: none;
  }
  #header .header_container .header_right {
    display: none;
  }
  #header .header_container .nav_bar {
    display: block;
  }
  #header .header_container .header_logo {
    margin-top: 48px;
  }
  #header .header_container .mobile_nav_list {
    display: block;
    margin-top: 57px;
    position: relative;
    float: right;
  }
  #header .header_container .mobile_nav_list a {
    display: block;
  }
  #header .header_container .mobile_nav_list #theme-change {
    position: relative;
    height: 26px;
    width: 26px;
    display: inline-block;
    vertical-align: middle;
    margin-right: 25px;
  }
  #header .header_container .mobile_nav_list #three-bar {
    position: relative;
    height: 26px;
    width: 26px;
    display: inline-block;
    vertical-align: middle;
  }
  #header .header_container .mobile_nav_list #three-bar::after {
    position: absolute;
    top: 0;
    left: 0;
    content: url(/icons/three-bars-icon.svg);
    display: block;
    width: 100%;
  }
  #header .header_container .mobile_nav_list #theme-change::after {
    position: absolute;
    top: 0;
    left: 0;
    content: url(/icons/moon-icon.svg);
    display: block;
    width: 100%;
  }
  #header .header_container .mobile_nav_list ul {
    position: fixed;
    height: calc(100vh - 130px);
    top: 130px;
    right: 0;
    background: #fff;
    box-shadow: rgba(0, 0, 0, 0.15) -1.95px -1.25px 2.6px;
    width: 100%;
    max-width: 260px;
    display: block;
    transform: translateX(100%);
    transition: transform 0.3s ease-in;
    z-index: 150;
  }
  #header .header_container .mobile_nav_list ul.is-open {
    transform: translateX(0);
  }
  #header .header_container .mobile_nav_list ul li:first-child {
    padding-top: 25px;
  }
  #header .header_container .mobile_nav_list ul li a {
    text-decoration: none;
    padding: 0 15px;
    font-size: 16px;
    font-family: "Inter", sans-serif;
    font-weight: 500;
    color: var(--text-black-color);
    line-height: 50px;
  }
  /* main */
  #main .main_container .main_content #typed {
    font-size: 40px;
  }
  #main .main_container {
    padding-left: 30px;
    padding-right: 30px;
  }
  #main .main_container .main_content {
    width: 385px;
  }
  #main .main_container .main_img .wow::before {
    height: 350px;
    width: 272.93px;
  }
  #main .main_container .main_img .wow figure img {
    height: 350px;
  }
  /* portfolio */
  #portfolio .portfolio_container {
    padding: 52px 30px 88px 30px;
  }
  #portfolio .portfolio_container h2 {
    font-size: 31px;
  }
  /* career-path */
  .career_container {
    padding-left: 30px;
    padding-right: 30px;
  }
  .career_container .career_list {
    width: 320px;
  }
  .career_container .career_description {
    margin-left: 390px;
  }
  .career_container .career_description section .experience_list li p {
    font-size: 14px;
  }

  /* testimonials-path */
  #testimonial .testimonial_container {
    padding: 52px 30px 77px 30px;
  }
  #testimonial .testimonial_container > h2 {
    font-size: 31px;
  }
  /* education and skills*/
  #education-and-skills .education_container > h2 {
    margin-bottom: 80px;
    font-size: 31px;
  }
  #education-and-skills .education_container {
    padding-left: 30px;
    padding-right: 30px;
    padding: 100px 30px 125px 30px;
  }
  /* contact */
  #contact .contact_container h2 {
    font-size: 31px;
  }
  .contact_container {
    padding-left: 30px;
    padding-right: 30px;
  }
}

/* Small devices (landscape phones, less than 768px) */
@media only screen and (max-width: 767.98px) {
  /* header */

  #header {
    height: 90px !important;
  }
  #header .header_container {
    padding-left: 15px;
    padding-right: 15px;
  }
  #header .header_container .header_logo {
    margin-top: 27px;
  }
  #header .header_container .nav_list {
    display: none;
  }
  #header .header_container .header_right {
    display: none;
  }
  #header .header_container .nav_bar {
    display: block;
  }
  #header .header_container .nav_list {
    display: none;
  }
  #header .header_container .header_right {
    display: none;
  }
  #header .header_container .nav_bar {
    display: block;
  }
  #header .header_container .mobile_nav_list {
    display: block;
    margin-top: 33px;
    position: relative;
    float: right;
  }
  #header .header_container .mobile_nav_list a {
    display: block;
  }
  #header .header_container .mobile_nav_list #theme-change {
    position: relative;
    height: 26px;
    width: 26px;
    display: inline-block;
    vertical-align: middle;
    margin-right: 25px;
  }
  #header .header_container .mobile_nav_list #three-bar {
    position: relative;
    height: 26px;
    width: 26px;
    display: inline-block;
    vertical-align: middle;
  }
  #header .header_container .mobile_nav_list #three-bar::after {
    position: absolute;
    top: 0;
    left: 0;
    content: url(/icons/three-bars-icon.svg);
    display: block;
    width: 100%;
  }
  #header .header_container .mobile_nav_list #theme-change::after {
    position: absolute;
    top: 0;
    left: 0;
    content: url(/icons/moon-icon.svg);
    display: block;
    width: 100%;
  }
  #header .header_container .mobile_nav_list ul {
    position: fixed;
    height: calc(100vh - 90px);
    top: 90px;
    right: 0;
    background: #fff;
    box-shadow: rgba(0, 0, 0, 0.15) -1.95px -1.25px 2.6px;
    width: 100%;
    max-width: 260px;
    display: block;
    transform: translateX(100%);
    transition: transform 0.3s ease-in;
    z-index: 150;
  }
  #header .header_container .mobile_nav_list ul.is-open {
    transform: translateX(0);
  }
  #header .header_container .mobile_nav_list ul li:first-child {
    padding-top: 25px;
  }
  #header .header_container .mobile_nav_list ul li a {
    text-decoration: none;
    padding: 0 15px;
    font-size: 16px;
    font-family: "Inter", sans-serif;
    font-weight: 500;
    color: var(--text-black-color);
    line-height: 50px;
  }
  /* main */
  #main {
    margin-top: 90px !important;
  }
  #main .main_container .main_content {
    width: 100%;
    text-align: center;
  }
  #main .main_container {
    padding-left: 15px;
    padding-right: 15px;
  }
  #main .main_content p:first-of-type {
    text-align: center;
  }
  .main_container .main_img {
    display: none;
  }
  /* portfolio */
  #portfolio .portfolio_container {
    padding-left: 15px;
    padding-right: 15px;
    text-align: center;
  }
  #portfolio .portfolio_container .portfolio_header_left {
    float: none;
  }
  .portfolio_header_right {
    display: none;
  }
  #portfolio .portfolio_container h2 {
    text-align: center;
  }
  /* career-path */
  .career_container {
    padding-left: 15px;
    padding-right: 15px;
  }
  .career_container {
  }
  .career_container .career_list {
    width: 100%;
    float: none;
  }
  .career_container .career_list ul {
    width: 100%;
    display: inline-block;
    vertical-align: middle;
    text-align: left;
  }
  .career_container .career_list ul li {
    display: inline-block;
    vertical-align: middle;
  }
  .career_container .career_list ul li a {
    text-decoration: underline;
    padding: 14px 16px;
  }
  .career_container .career_list ul li a .chevron-right-icon {
    right: 0;
  }
  .career_container .career_description {
    margin-left: 0;
  }
  .career_container .career_description section .experience_list li p {
    display: inline-block;
    font-size: 14px;
  }
  .career_container .career_list ul li a.selected {
    text-decoration: underline;
  }
  .career_container .career_list ul {
    margin-top: 70px;
  }
  .career_container {
    padding-top: 74px;
    padding-bottom: 74px;
  }
  .career_container .career_list h2 {
    font-size: 31px;
  }
  .career_container .career_list ul li a.selected .chevron-right-icon {
    display: none;
  }
  .career_container .career_description section h2 {
    text-align: center;
  }
  .career_container .career_description section h4 {
    text-align: center;
  }
  .career_container .career_description section h3 {
    text-align: center;
  }
  .career_container .career_description section .tech_stack_list {
    text-align: center;
    display: block;
  }
  .career_container .career_list h2 {
    text-align: center;
  }
  .career_container .career_list {
    text-align: center;
  }
  /* testimonials-path */

  #testimonial .testimonial_container {
    padding-left: 15px;
    padding-right: 15px;
    text-align: center;
  }
  /* education and skills */
  #education-and-skills .education_container {
    padding-left: 15px;
    padding-right: 15px;
    text-align: center;
  }
  #education-and-skills
    .education_container
    .education_left
    .education_school
    li {
    padding-left: 0;
  }
  #education-and-skills .education_container .education_left {
    float: none;
    margin: 0 auto;
    max-width: 400px;
    width: 100%;
  }
  #education-and-skills .education_container .education_right {
    float: none;
    margin: 90px auto 0px auto;
    width: 100%;
  }
  #education-and-skills .education_container .education_right .tech-list li {
    width: 100%;
    float: none;
  }
  /* contact */
  .contact_container {
    padding-left: 15px;
    padding-right: 15px;
    text-align: center;
  }
  #contact .contact_container .contact_left {
    float: none;
    width: 100%;
  }
  #contact .contact_container .contact_left {
    max-width: 100%;
  }
  #contact
    .contact_container
    .contact_left
    form
    textarea[name="textarea-message"] {
    max-width: 100%;
    min-width: 100%;
  }
  #contact .contact_container .contact_right {
    margin-top: 90px;
    width: 100%;
    float: none;
  }
  #contact .contact_container .contact_right .contact_address .address-icon,
  #contact .contact_container .contact_right .contact_phone .phone-icon,
  #contact .contact_container .contact_right .contact_email .email-icon {
    display: block;
    position: absolute;
    top: 0;
    left: 50%;
    transform: translateX(-50%);
  }
  #contact .contact_container .contact_right .contact_address .address-info,
  #contact .contact_container .contact_right .contact_phone .phone-info,
  #contact .contact_container .contact_right .contact_email .email-info {
    padding-top: 75px;
    display: block;
    text-align: center;
    padding-left: 0;
  }

  /* footer */
  #footer .footer_container {
    padding-left: 15px;
    padding-right: 15px;
    height: 141px;
  }
}

/* Extra small devices (portrait phones, less than 576px) */
@media only screen and (max-width: 575.98px) {
  #education-and-skills
    .education_container
    .education_left
    .education_school
    li {
    padding-left: 15px;
    padding-right: 15px;
  }
}

